SET(LIBRARY-SOURCES arygon pn532_uart)

# find PCSC library and headers
IF(LIBNFC_PCSC)
  FIND_PACKAGE(PCSC REQUIRED)
  ADD_DEFINITIONS("-DHAVE_PCSC_LITE=1")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PCSC_CFLAGS_OTHER}")
  SET(LIBRARY-SOURCES ${LIBRARY-SOURCES} "acr122")
ENDIF(LIBNFC_PCSC)

# find libusb library and headers
IF(LIBNFC_USB)
  FIND_PACKAGE(LIBUSB REQUIRED)
  ADD_DEFINITIONS("-DHAVE_LIBUSB=1")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${LIBUSB_CFLAGS_OTHER}")
  SET(LIBRARY-SOURCES ${LIBRARY-SOURCES} "pn531" "pn533")
ENDIF(LIBNFC_USB)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
